Añadido apartado de discusión

--- a/report/tex_files/discusion.tex
+++ b/report/tex_files/discusion.tex
@@ -1,1 +1,13 @@
 \section{Discusión}
+
+Una vez obtenidos los resultados, en este apartado se indagará en la relación que pueda tener el SarsCOV-2 con las funciones biológicas obtenidas previamente.
+
+Tras el análisis funcional del \textbf{cluster 112}, descubrimos que una de las funciones con las que está muy relacionado es con el proceso metabólico de la fucosa. La fucosa es un azúcar que forma parte de algunas de las glucoproteínas que se encuentran en el aparato del Golgi cuando se produce la glucosilación.
+
+Un estudio de Stanford Medicine (Estados Unidos) ha descubierto que aquellos pacientes que tenían una deficiencia en la fucosa, sufrían la enfermedad con más gravedad que los que tenían niveles normales. 
+Además estos pacientes con leves niveles de fucosa, sus células inmunitarias presentaban niveles muy altos de unos receptores llamados CD16a, los cuales se sabe que aumentan la actividad inflamatoria de las células inmunitarias. 
+Para una correcta respuesta inmunitaria es necesaria un poco de inflamación, sin embargo, si es demasiada puede producir que el paciente no tenga una respuesta inmunitaria buena y producir una  inflamación en los pulmones, lo que puede provocar que el paciente pueda llegar a un estado crítico. 
+
+Así mismo, tras el análisis funcional del \textbf{cluster 22}, se ha llegado a la conclusión de que la principal función biológica que desempeñan las proteínas pertenecientes a dicho grupo afectan a la mitocondria de las células. El SarsCOV-2 secuestra las mitocondrias de las células inmunitarias, se replica dentro de las estructuras mitocondriales y altera la dinámica mitocondrial que conduce a la muerte celular, lo que aumenta la mortalidad de los pacientes que lo sufren.
+
+De la misma forma, tras el análisis funcional del \textbf{cluster 78}, se ha llegado a la conclusión de que la principal función biológica que desempeñan las proteínas pertenecientes a dicho grupo afectan a la remodelación/degradación de la matriz extracelular de los pulmones. Los procesos patológicos que conducen a la disminución de la función pulmonar se usan para identificar mejor a los pacientes infectados con SARS-Co-V2 con mayor riesgo de deterioro agudo o daño fibrótico persistente del pulmón y, como consecuencia, se podría usar para guiar las decisiones de tratamiento.
