--- a/report/tex_files/resultados.tex
+++ b/report/tex_files/resultados.tex
@@ -163,7 +163,7 @@ Tras realizar el análisis funcional usando el paquete clusuterProfiler, hemos g
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/funcionesGO112.png}
+	\includegraphics[width=70mm,scale=1.2]{figures/funcionesG112.png}
 	\caption{\textit{Funciones principales del clúster 112}}
 	\label{112funciones}
 \end{figure}
