--- a/report/tex_files/conclusiones.tex
+++ b/report/tex_files/conclusiones.tex
@@ -1,5 +1,9 @@
 \section{Conclusiones}
 
 Se ha llegado a la conclusión final de que las funciones biológicas de las proteínas estudiadas están basadas en el daño que el SarsCOV-2 le genera a los pulmones. 
-Como se ha explicado, la fructosa los inflama y les genera un daño permanente que hace que las mitocondrias de las células se dañen y provoquen la muerte celular, lo que impide la regeneración de las matrices extracelulares de los pulmones.
-Esto desencadenará en daños permanentes en los pacientes, lo que puede impedir su total recuperación, que se les desarrollen patologías crónicas o incluso que le provoquen la muerte (sepsis por COVID).
+Como se ha explicado, la fucosa los inflama y les genera un daño permanente que hace que las mitocondrias de las células se dañen y provoquen la muerte celular, lo que impide la regeneración de las matrices extracelulares de los pulmones.
+Esto desencadenará en daños permanentes en los pacientes, lo que puede impedir su total recuperación, que se les desarrollen patologías crónicas o incluso provocarles la muerte (sepsis por COVID).
+
+Los resultados obtenidos en el análisis concuerdan con la descripción del propio virus, ya que el SarsCOV-2 provoca una infección respiratoria en los pacientes que afecta a todo su sistema respiratorio. 
+
+Este resultado demuestra la importancia de contar con el interactoma humano a la hora de estudiar enfermedades y así encontrar los principales focos causantes de la misma.
