--- a/report/tex_files/resultados.tex
+++ b/report/tex_files/resultados.tex
@@ -75,7 +75,7 @@ Podemos observar que este método ha definido 165 comunidades diferentes, la may
 
 Para poder analizar las comunidades y obtener las que consideremos más relevantes, han sido filtradas por tamaño y modularidad. Lo cual nos ha facilitado la búsqueda de la comunidad más grande y dos comunidades que tienen mayor modularidad ( y  respectivamente). Las gráficas generadas para este propósito son Figure~\ref{comTamaño} y Figure~\ref{comModularidad}.
 
-\begin{figure}h]
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/lc_larger_clusters.png}
 	\caption{\textit{Comunidades por tamaño}}
